SubBt/force-app/main/default/objects/RFQ__c/RFQ__c.object-meta.xml
<CustomObject>
    <label>RFQ</label>
    <nameField>
        <label>RFQ Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RFQs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>