SubBt/force-app/main/default/objects/RFQ__c/fields/Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Date__c</fullName>
    <inlineHelpText>Date the Vendor Accepted the quote.</inlineHelpText>
    <label>Accepted Date</label>
    <type>Date</type>
</CustomField>