SubBt/force-app/main/default/objects/RFQ__c/fields/Associated_Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Associated_Purchase_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the Purchase Order that was created from this RFQ.</inlineHelpText>
    <label>Associated Purchase Order</label>
    <referenceTo>Purchase_Order__c</referenceTo>
    <relationshipName>RFQs</relationshipName>
    <type>Lookup</type>
</CustomField>