SubBt/force-app/main/default/objects/RFQ__c/fields/Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Auto_Number__c</fullName>
    <description>This is system generated auto number.</description>
    <displayFormat>RFQ-{00000}</displayFormat>
    <inlineHelpText>This is system generated auto number.</inlineHelpText>
    <label>RFQ #</label>
    <type>AutoNumber</type>
</CustomField>