SubBt/force-app/main/default/objects/RFQ__c/fields/Awarded_Date__c.field-meta.xml
<CustomField>
    <fullName>Awarded_Date__c</fullName>
    <inlineHelpText>Date the Vendor was awarded the quote.</inlineHelpText>
    <label>Awarded Date</label>
    <type>Date</type>
</CustomField>