SubBt/force-app/main/default/objects/RFQ__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <inlineHelpText>Date the RFQ is due.</inlineHelpText>
    <label>RFQ Due Date</label>
    <type>Date</type>
</CustomField>