SubBt/force-app/main/default/objects/RFQ__c/fields/External_PO__c.field-meta.xml
<CustomField>
    <fullName>External_PO__c</fullName>
    <label>External PO #</label>
    <length>250</length>
    <type>Text</type>
</CustomField>