SubBt/force-app/main/default/objects/RFQ__c/fields/New_Completion__c.field-meta.xml
<CustomField>
    <fullName>New_Completion__c</fullName>
    <label>New Completion</label>
    <type>Date</type>
</CustomField>