SubBt/force-app/main/default/objects/RFQ__c/fields/Reason_for_Cancelling_RFQ__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Cancelling_RFQ__c</fullName>
    <label>Reason for Cancelling RFQ</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>