SubBt/force-app/main/default/objects/RFQ__c/fields/RFI_Owner__c.field-meta.xml
<CustomField>
    <fullName>RFI_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The RFI Owner is the person who is responsible for responding to the RFI.</inlineHelpText>
    <label>RFI Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RFQs</relationshipName>
    <type>Lookup</type>
</CustomField>