SubBt/force-app/main/default/objects/RFQ__c/fields/RFQ_Details__c.field-meta.xml
<CustomField>
    <fullName>RFQ_Details__c</fullName>
    <description>This is the section where you will provide the details of the RFQ.</description>
    <inlineHelpText>This is the section where you will provide the details of the RFQ.</inlineHelpText>
    <label>RFQ Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>