SubBt/force-app/main/default/objects/RFQ__c/fields/RFQ_Number__c.field-meta.xml
<CustomField>
    <fullName>RFQ_Number__c</fullName>
    <formula>Project__r.Auto_Number__c &amp;&apos;-&apos;&amp;  Auto_Number1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RFQ-P #</label>
    <type>Text</type>
</CustomField>