SubBt/force-app/main/default/objects/RFQ__c/fields/RFQ_s_Not_Replied_To__c.field-meta.xml
<CustomField>
    <fullName>RFQ_s_Not_Replied_To__c</fullName>
    <formula>RFQ_s_Sent__c -  RFQ_s_Replied_To__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This number of RFQ&apos;s Sent - RFQ&apos;s Replied To.</inlineHelpText>
    <label>RFQ&apos;s Not Replied To</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>