SubBt/force-app/main/default/objects/RFQ__c/fields/RFQ_s_Replied_To__c.field-meta.xml
<CustomField>
    <fullName>RFQ_s_Replied_To__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>The number of RFQ&apos;s that the Vendors Replied to.</inlineHelpText>
    <label>RFQ&apos;s Replied To</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>