SubBt/force-app/main/default/objects/RFQ__c/fields/RFQ_s_Replied_Toe_Percent__c.field-meta.xml
<CustomField>
    <fullName>RFQ_s_Replied_Toe_Percent__c</fullName>
    <formula>IF(RFQ_s_Sent__c = 0,
    NULL,
    RFQ_s_Replied_To__c /RFQ_s_Sent__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RFQ&apos;s Replied To %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>