SubBt/force-app/main/default/objects/RFQ__c/fields/RFQ_s_Sent__c.field-meta.xml
<CustomField>
    <fullName>RFQ_s_Sent__c</fullName>
    <inlineHelpText>The number of RFQ&apos;s sent to Vendors.</inlineHelpText>
    <label>RFQ&apos;s Sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>