SubBt/force-app/main/default/objects/RFQ__c/fields/RFQ_Workflow_Stage__c.field-meta.xml
<CustomField>
    <fullName>RFQ_Workflow_Stage__c</fullName>
    <label>RFQ Workflow Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>