SubBt/force-app/main/default/objects/RFQ__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <inlineHelpText>Date the work is scheduled to Start.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>