SubBt/force-app/main/default/objects/RFQ__c/fields/Trade_Type__c.field-meta.xml
<CustomField>
    <fullName>Trade_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Trade the Vendor or Supplier specializes in.</inlineHelpText>
    <label>Trade Type</label>
    <referenceTo>Trade_Type__c</referenceTo>
    <relationshipName>RFQs</relationshipName>
    <type>Lookup</type>
</CustomField>