SubBt/force-app/main/default/objects/RFQ__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the awarded vendor</description>
    <inlineHelpText>Vendor that was Awarded the work.</inlineHelpText>
    <label>Awarded Vendor</label>
    <referenceTo>RFQ_To_Vendor__c</referenceTo>
    <relationshipName>RFQs</relationshipName>
    <type>Lookup</type>
</CustomField>