SubBt/force-app/main/default/objects/RFQ__c/fields/Vendor_Quote__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Quote__c</fullName>
    <inlineHelpText>Amount the Vendor submitted for the work and was Awarded the job.</inlineHelpText>
    <label>Awarded Amount</label>
    <summarizedField>RFQ_Item__c.Total_Price__c</summarizedField>
    <summaryForeignKey>RFQ_Item__c.RFQ_Package__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>