SubBt/force-app/main/default/objects/RFQ__c/fields/Vendor_Rating__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Rating__c</fullName>
    <inlineHelpText>How would you rate the work of this Vendor?  A rating of 5 is the best.</inlineHelpText>
    <label>Vendor Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>