SubBt/force-app/main/default/objects/RFQ__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Auto_Number__c</columns>
    <columns>Project__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Vendor_Quote__c</columns>
    <columns>Due_Date__c</columns>
    <columns>RFQ_Details__c</columns>
    <columns>Accepted_Date__c</columns>
    <columns>Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>