SubBt/force-app/main/default/objects/RFQ__c/listViews/All_RFQs.listView-meta.xml
<ListView>
    <fullName>All_RFQs</fullName>
    <columns>Auto_Number__c</columns>
    <columns>Project__c</columns>
    <columns>NAME</columns>
    <columns>RFQ_Details__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All RFQs</label>
    <sharedTo>
        <allPartnerUsers></allPartnerUsers>
    </sharedTo>
</ListView>