SubBt/force-app/main/default/objects/RFQ__c/listViews/Master_RFQ_s.listView-meta.xml
<ListView>
    <fullName>Master_RFQ_s</fullName>
    <columns>Project__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Vendor_Quote__c</columns>
    <columns>Due_Date__c</columns>
    <columns>RFQ_Details__c</columns>
    <columns>Accepted_Date__c</columns>
    <columns>Auto_Number__c</columns>
    <columns>RFQ_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Master</value>
    </filters>
    <label>Master RFQ&apos;s</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>