SubBt/force-app/main/default/objects/RFQ__c/listViews/My_RFQs.listView-meta.xml
<ListView>
    <fullName>My_RFQs</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Project__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,Request Sent</value>
    </filters>
    <label>My RFQs</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>